platform/kubernetes/base/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shopsphere-apps
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: order-service
    app.kubernetes.io/component: order-processing
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
